2009-08-27  John W. Eaton  <jwe@octave.org>

	* graphics.cc (validate_property_name): New static function.
	(base_properties::dynamic_property_names): New function.
	* graphicffs.h.in (base_properties::dynamic_property_names):
	Provide decl.
	* genprops.awk: Generate all_property_names functions.  Use
	all_property_names as needed to avoid duplication elsewhere.
	Call validate_property_name in set/get functions.

2009-08-27  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (get_current_method_class): Simplify.
	(octave_class::in_class_method): Don't rely on multiple copies of
	methods. Don't declare as const.
	(octave_class::octave_class (const Octave_map&, const std::string&, 
	const octave_value_list&)):
	Call symbol_table::add_to_parent_map instead.
	* ov-class.h (octave_class::in_class_method): Don't declare as const.
	* symtab.h (symbol_table::parent_map): New field.
	(symbol_table::add_to_parent_map): New method.
	(symbol_table::load_class_method): Search also parent classes.
	* load-path.h (load_path::parent_map, load_path::add_to_parent_map,
	load_path::do_add_to_parent_map): Remove.
	* load-path.cc (load_path::do_find_method): Don't search parent
	classes.

2009-08-27  Jaroslav Hajek  <highegg@gmail.com>

	* OPERATORS/op-cs-cs.cc: Simplify comparison operators.
	* OPERATORS/op-fcs-fcs.cc: Ditto.

2009-08-25  David Grundberg  <individ@acc.umu.se>

	* DLD-FUNCTIONS/__magick_read__.cc [HAVE_MAGICK]: Include
	Magick++.h instead of GraphicsMagick/Magic++.h.
	* Makefile.in: Replace MAGICK_LIBS with MAGICK_LDFLAGS and
	MAGICK_LIBS. Replace MAGICK_INCFLAGS with MAGICK_CPPFLAGS.
	* oct-conf.h.in: Ditto.
	* toplev.cc (octave_config_info): Ditto.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in: New defines for UMFPACK_CPPFLAGS and UMFPACK_LDFLAGS.
	* toplev.cc (octave_config_info): Include them in the list.

2009-08-26  John W. Eaton  <jwe@octave.org>

	* oct-conf.h.in: New defines for QRUPDATE_CPPFLAGS and QRUPDATE_LDFLAGS.